src/objects/HPP_MI__c.object
<CustomObject>
    <fields>
        <fullName>Intermediary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intermediary</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Business_Contacts__c.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Operations Sharia Approved Contracts Log, Vendors</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Business_Contacts__c</referenceTo>
        <relationshipLabel>HPP MI</relationshipLabel>
        <relationshipName>HPP_MI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Month_FTV__c</fullName>
        <formula>HPP_Previous_Month_s_Balance__c / Valuation_Figure__c</formula>
        <label>Last Month FTV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lead_provider__c</fullName>
        <formula>TEXT(  Opportunity__r.Location_of_Lead_Provider__c  )</formula>
        <label>Lead provider</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Title_at_Land_Registry_Update__c</fullName>
        <label>Legal Title at Land Registry Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monthly_Rental_Cover__c</fullName>
        <formula>Anticipated_Monthly_Rental_Income__c  /  BTL_Monthly_Repayment__c</formula>
        <label>Monthly Rental Cover %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_HPP_CAA_Opp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New HPP CAA Opp</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>HPP MI (New HPP CAA Opp)</relationshipLabel>
        <relationshipName>HPP_MI2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Payment_Date__c</fullName>
        <label>Next Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_of_Applicants__c</fullName>
        <label>No of Applicants</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_days_with_Underwriting__c</fullName>
        <formula>IF(AND((5 - (CASE(MOD(  Submitted_to_Credit__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) &lt; (CASE(MOD(   Pre_Val_Dec_1_Date__c   - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) ), 
(((Pre_Val_Dec_1_Date__c  -   Submitted_to_Credit__c ) + 1) &lt; 7)), 
((CASE(MOD(  Pre_Val_Dec_1_Date__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) - (5 - (CASE(MOD(  Submitted_to_Credit__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)))),
(((FLOOR(((  Pre_Val_Dec_1_Date__c  -  Submitted_to_Credit__c ) - (CASE(MOD(  Submitted_to_Credit__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 6, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0))) / 7)) * 5) +
(CASE(MOD( Submitted_to_Credit__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) + 
(CASE(MOD(  Pre_Val_Dec_1_Date__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0))))-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of days with Underwriting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Accepted_to_Drawdown__c</fullName>
        <formula>Actual_Completion_Date__c - Offer_Returned__c</formula>
        <label>Offer Accepted to Drawdown</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Letter_Reissued_Indicator__c</fullName>
        <formula>IF(  Days_Since_2nd_Offer_Letter_Sent__c  &lt;= 5 , IMAGE(&quot;/img/samples/flag_green.gif&quot; , &quot;&quot;),
IF( AND( Days_Since_2nd_Offer_Letter_Sent__c &gt;= 6, Days_Since_2nd_Offer_Letter_Sent__c &lt;= 8)  , IMAGE(&quot;/img/samples/flag_yellow.gif&quot; , &quot;&quot;),
IF(  Days_Since_2nd_Offer_Letter_Sent__c  &gt;= 8, IMAGE(&quot;/img/samples/flag_red.gif&quot; , &quot;&quot;), &quot;&quot;
)))</formula>
        <label>Offer Letter Reissued Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Letter_Sent_Indicator__c</fullName>
        <formula>IF( Days_Since_Offer_Letter_Sent__c &lt;= 10 , IMAGE(&quot;/img/samples/flag_green.gif&quot; , &quot;&quot;),
IF( AND(Days_Since_Offer_Letter_Sent__c &gt;= 11, Days_Since_Offer_Letter_Sent__c &lt;= 14)  , IMAGE(&quot;/img/samples/flag_yellow.gif&quot; , &quot;&quot;),
IF( Days_Since_Offer_Letter_Sent__c &gt;= 15  , IMAGE(&quot;/img/samples/flag_red.gif&quot; , &quot;&quot;), &quot;&quot;
)))</formula>
        <label>Offer Letter Sent Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Letter_Sent__c</fullName>
        <label>Offer Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Printed_Date__c</fullName>
        <label>Offer Printed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Returned_Indicator__c</fullName>
        <formula>IF(  Offer_Letter_Sent__c       =  today()+90 , IMAGE(&quot;/img/samples/flag_red.gif&quot; , &quot;&quot;), &quot;&quot;
)</formula>
        <label>Offer Returned Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Returned__c</fullName>
        <label>Offer Returned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Sent_to_Offer_Signed_Accepted__c</fullName>
        <formula>Offer_Returned__c - Offer_Letter_Sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer Sent to Offer Signed &amp; Accepted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_hold_since_date__c</fullName>
        <label>On hold since date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OppGrossIncome__c</fullName>
        <formula>Opportunity__r.Gross_Annual_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OppGrossIncome</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This will show the Opportunity owner for the</inlineHelpText>
        <label>Opportunity Owner</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>HPP MI (Opportunity Owner)</relationshipLabel>
        <relationshipName>HPP_MI1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>HPP MI</relationshipLabel>
        <relationshipName>HPP_MI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Offer_Sent_to_IBB__c</fullName>
        <label>Original Offer  Sent to IBB Solicitors</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overall_Decline_Date__c</fullName>
        <label>Overall Decline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner_Occupired__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will be ticked automatically for HPP and not for BTL.
It will need to manually be ticked for any other product manually</inlineHelpText>
        <label>Owner Occupied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>HPP MI</relationshipLabel>
        <relationshipName>HPP_MI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Val_Auth_Date_1__c</fullName>
        <formula>IF(ISPICKVAL(  Post_Val_Dec_1__c , &quot;Authorised&quot;),  Post_Val_Dec_1_Date__c , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post Val Auth Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Post_Val_Auth_Date_2__c</fullName>
        <formula>IF(ISPICKVAL( Pre_Val_Dec_2__c, &quot;Authorised&quot;),  Pre_Val_Dec_2_Date__c , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post Val Auth Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Post_Val_Dec_1_Date__c</fullName>
        <label>Post Val Dec 1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Post_Val_Dec_1__c</fullName>
        <label>Post Val Dec 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authorised</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Further Information Required</fullName>
                </value>
                <value>
                    <fullName>Withdrawal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Val_Dec_2_Date__c</fullName>
        <label>Post Val Dec 2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Post_Val_Dec_2__c</fullName>
        <label>Post Val Dec 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authorised</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Further Information Required</fullName>
                </value>
                <value>
                    <fullName>Withdrawal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Val_Auth_Date_1__c</fullName>
        <formula>IF(ISPICKVAL( Pre_Val_Dec_1__c, &quot;Authorised&quot;),  Pre_Val_Dec_1_Date__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre Val Auth Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Val_Auth_Date_2__c</fullName>
        <formula>IF(ISPICKVAL( Pre_Val_Dec_2__c, &quot;Authorised&quot;), Pre_Val_Dec_2_Date__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre Val Auth Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Val_Dec_1_Date__c</fullName>
        <label>Pre Val Dec 1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Val_Dec_1__c</fullName>
        <label>Pre Val Dec 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authorised</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Further Information Required</fullName>
                </value>
                <value>
                    <fullName>Withdrawal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_Val_Dec_2_Date__c</fullName>
        <label>Pre Val Dec 2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Val_Dec_2__c</fullName>
        <label>Pre Val Dec 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authorised</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Further Information Required</fullName>
                </value>
                <value>
                    <fullName>Withdrawal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriAppEmploymentStatus__c</fullName>
        <formula>text(Primary_Customer_Name__r.Employment_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PriAppEmploymentStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Customer_Full_Name__c</fullName>
        <formula>Text (Primary_Customer_Name__r.Salutation) +&quot; &quot; +  Primary_Customer_Name__r.FirstName +&quot; &quot; + Primary_Customer_Name__r.LastName</formula>
        <label>Primary Customer Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>HPP MI</relationshipLabel>
        <relationshipName>HPP_MI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Board_Limit__c</fullName>
        <label>Product Board Limit%</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Interested_in__c</fullName>
        <label>Product Interested in</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HPP</fullName>
                </value>
                <value>
                    <fullName>HPS</fullName>
                </value>
                <value>
                    <fullName>BTL</fullName>
                </value>
                <value>
                    <fullName>GCC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Opportunity__r.IBB_Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Value__c</fullName>
        <label>Property Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Finance_v1__c</fullName>
        <label>Purpose of Finance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Purchase</fullName>
                </value>
                <value>
                    <fullName>Refinance</fullName>
                </value>
                <value>
                    <fullName>Equity Release</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROT_Decision_Date__c</fullName>
        <label>ROT Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ROT_Decision__c</fullName>
        <label>ROT Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authorised</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Further Information Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROT_Indicator__c</fullName>
        <formula>IMAGE(
Case(ROT_Decision__c,
&apos;Authorised&apos;,&quot;/img/samples/flag_green.gif&quot;,
&apos;Further Information Required&apos;,&quot;/img/samples/flag_yellow.gif&quot;,
&apos;Declined&apos;,&quot;/img/samples/flag_red.gif&quot;,
&quot;&quot;
)
,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ROT Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROT_Received__c</fullName>
        <label>ROT Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_for_abandonment__c</fullName>
        <label>Reason for abandonment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Withdrew</fullName>
                </value>
                <value>
                    <fullName>Underwriting decision</fullName>
                </value>
                <value>
                    <fullName>SLA decision(REAT)</fullName>
                </value>
                <value>
                    <fullName>Resubmitted</fullName>
                </value>
                <value>
                    <fullName>Change of Property</fullName>
                </value>
                <value>
                    <fullName>FI not supplied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_update__c</fullName>
        <inlineHelpText>If other, please complete the field below.</inlineHelpText>
        <label>Reason for update</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Missing documents</fullName>
                </value>
                <value>
                    <fullName>Incomplete documents signed</fullName>
                </value>
                <value>
                    <fullName>Change to details</fullName>
                </value>
                <value>
                    <fullName>Photocopy/not original documents</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_Board_Limit__c</fullName>
        <label>Region Board Limit</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rental_Rate_Type__c</fullName>
        <description>For use with HPP FSA return report</description>
        <inlineHelpText>F: Fixed rate                                
V: Variable rate                             
O: Other (Use this when product is not one of the above)</inlineHelpText>
        <label>Rental Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Completion_Date_v1__c</fullName>
        <formula>Requested_Completion_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Completion Date v1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Completion_Date__c</fullName>
        <label>Requested Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SDLT_Received__c</fullName>
        <label>SDLT Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SDLT_Sent__c</fullName>
        <label>SDLT Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Credit_Check__c</fullName>
        <label>Second Credit Check</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Secondary_Customer_Full_Name__c</fullName>
        <formula>Text (Secondary_Customer_Name__r.Salutation) +&quot; &quot; +  Secondary_Customer_Name__r.FirstName  +&quot; &quot; +  Secondary_Customer_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Customer Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>HPP MI (Secondary Customer Name)</relationshipLabel>
        <relationshipName>HPP_MI1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SolicitorLineOneAddress__c</fullName>
        <formula>Solicitor_Flat_No_Home_Name__c +&quot; &quot;+ Solicitor_Street__c</formula>
        <label>SolicitorLineOneAddress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solicitor_Flat_No_Home_Name__c</fullName>
        <label>Solicitor Flat No/Home Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solicitor_Name__c</fullName>
        <label>Solicitor Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solicitor_Phone_Number__c</fullName>
        <label>Solicitor Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Solicitor_Postcode__c</fullName>
        <label>Solicitor Postcode</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solicitor_Street__c</fullName>
        <label>Solicitor Street</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solicitor_Town_City__c</fullName>
        <label>Solicitor Town/City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solicitors_fees_to_be_paid__c</fullName>
        <label>Solicitors fees to be paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Submission_Quality_Notes__c</fullName>
        <label>Submission Quality Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Submission_Quality__c</fullName>
        <label>Submission Quality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_to_Credit__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Submitted to Credit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subsidence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subsidence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1_Received__c</fullName>
        <label>TR1 Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1_Sent_to_IBB__c</fullName>
        <label>TR1 Sent to IBB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Value__c</fullName>
        <label>Target Value</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Time_Since_2nd_Offer__c</fullName>
        <label>Time Since 2nd Offer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-30 days</fullName>
                </value>
                <value>
                    <fullName>30-60 days</fullName>
                </value>
                <value>
                    <fullName>60-90 days</fullName>
                </value>
                <value>
                    <fullName>90 plus days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Since_Offer__c</fullName>
        <inlineHelpText>Please do not edit or alter.
This will automatically change based on workflow rules.</inlineHelpText>
        <label>Time Since Offer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-30 days</fullName>
                </value>
                <value>
                    <fullName>30-60 days</fullName>
                </value>
                <value>
                    <fullName>60-90 days</fullName>
                </value>
                <value>
                    <fullName>90 plus days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Gross_Income__c</fullName>
        <formula>Primary_Customer_Name__r.Gross_Annual_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Gross Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Finance__c</fullName>
        <formula>TEXT(Opportunity__r.Purpose_of_Finance__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of Finance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_HPP__c</fullName>
        <label>Type of HPP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HPP</fullName>
                </value>
                <value>
                    <fullName>HPS</fullName>
                </value>
                <value>
                    <fullName>BTL</fullName>
                </value>
                <value>
                    <fullName>GCC</fullName>
                </value>
                <value>
                    <fullName>CPF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Underwriter__c</fullName>
        <label>Underwriter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>David Harris</fullName>
                </value>
                <value>
                    <fullName>Zahid Butt</fullName>
                </value>
                <value>
                    <fullName>Peter Battersby</fullName>
                </value>
                <value>
                    <fullName>Sultan Choudhury</fullName>
                </value>
                <value>
                    <fullName>Credit Committee</fullName>
                </value>
                <value>
                    <fullName>Board</fullName>
                </value>
                <value>
                    <fullName>Aasim Ahmed</fullName>
                </value>
                <value>
                    <fullName>Roger Farnsworth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Underwriting_Days__c</fullName>
        <formula>Pre_Val_Dec_1_Date__c - Submitted_to_Credit__c</formula>
        <label>Days with Underwriting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Val_FTV__c</fullName>
        <formula>Finance_Required__c /  Valuation_Figure__c</formula>
        <label>Val FTV%</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Valuation_Comments__c</fullName>
        <label>Valuation Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Valuation_Fee_Amount__c</fullName>
        <label>Valuation Fee Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valuation_Figure__c</fullName>
        <label>Valuation Figure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valuation_Instructed__c</fullName>
        <label>Valuation Instructed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valuation_Received__c</fullName>
        <label>Valuation Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valuation_Received_to_Offer_Sent__c</fullName>
        <formula>Offer_Letter_Sent__c  -  Valuation_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valuation Received to Offer Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>With_Scanning__c</fullName>
        <label>With Scanning</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2nd_IBB_Solicitors_Confirmation__c</fullName>
        <label>2nd IBB Solicitors Confirmation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2nd_Offer_Letter_Returned__c</fullName>
        <label>2nd Offer Letter Returned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2nd_Offer_Letter_Sent_Indicator__c</fullName>
        <formula>IF(Days_Since_2nd_Offer_Letter_Sent__c  &lt;= 5 , IMAGE(&quot;/img/samples/flag_green.gif&quot; , &quot;&quot;),
IF( AND(Days_Since_2nd_Offer_Letter_Sent__c &gt;= 6, Days_Since_Offer_Letter_Sent__c &lt;= 8)  , IMAGE(&quot;/img/samples/flag_yellow.gif&quot; , &quot;&quot;),
IF(Days_Since_2nd_Offer_Letter_Sent__c &gt;= 8  , IMAGE(&quot;/img/samples/flag_red.gif&quot; , &quot;&quot;), &quot;&quot;
)))</formula>
        <label>2nd Offer Letter Sent Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Offer_Letter_Sent__c</fullName>
        <label>2nd Offer Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2nd_Offer_Printed_Date__c</fullName>
        <label>2nd Offer Printed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2nd_Original_Offer_Sent_to_IBB_Solicito__c</fullName>
        <label>2nd Original Offer Sent to IBB Solicitor</label>
        <type>Date</type>
    </fields>
    <label>HPP MI</label>
    <nameField>
        <label>HPP MI</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HPP MI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Advance_to_sols</fullName>
        <active>false</active>
        <errorConditionFormula>Advance_to_Solicitors__c  &gt; today()</errorConditionFormula>
        <errorDisplayField>Advance_to_Solicitors__c</errorDisplayField>
        <errorMessage>This date field cannot be in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Archived</fullName>
        <active>true</active>
        <errorConditionFormula>Archived__c  &gt; today()</errorConditionFormula>
        <errorDisplayField>Archived__c</errorDisplayField>
        <errorMessage>This date field cannot be in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BTL_fee_paid</fullName>
        <active>true</active>
        <errorConditionFormula>BTL_Fee_Paid__c &gt; today()</errorConditionFormula>
        <errorDisplayField>BTL_Fee_Paid__c</errorDisplayField>
        <errorMessage>This date field cannot be in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_update</fullName>
        <active>true</active>
        <errorConditionFormula>Customer_Updates__c   &gt; today()</errorConditionFormula>
        <errorDisplayField>Customer_Updates__c</errorDisplayField>
        <errorMessage>This date field cannot be in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Valuation_Booked_not_in_the_past</fullName>
        <active>false</active>
        <description>The valuation booked date cannot be in the past</description>
        <errorConditionFormula>Date_Valuation_Booked__c  &lt; today()</errorConditionFormula>
        <errorDisplayField>Date_Valuation_Booked__c</errorDisplayField>
        <errorMessage>This date cannot be in the past</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_funds_sent</fullName>
        <active>true</active>
        <errorConditionFormula>Date_Funds_Sent__c  &gt; today()</errorConditionFormula>
        <errorDisplayField>Date_Funds_Sent__c</errorDisplayField>
        <errorMessage>This date field cannot be in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_redeemed</fullName>
        <active>true</active>
        <errorConditionFormula>Date_Redeemed__c  &gt; today()</errorConditionFormula>
        <errorDisplayField>Date_Redeemed__c</errorDisplayField>
        <errorMessage>This date field cannot be in the future.</errorMessage>
    </validationRules>
</CustomObject>